2008-03-07  Christian Bayle <bayle@debian.org>
	
	* admin/*,my/*: Migrate to util_make_url()
	* introduced $sys_noforcetype to make possible to get rid of /projects
	and /users forcetype

2008-02-28  Roland Mas  <lolando@debian.org>

	* plugins/*: Migrate to util_make_url() and util_make_link().
	* www/forum/*: Ditto.

2008-02-27  Roland Mas  <lolando@debian.org>

	* deb-specific/db-upgrade.pl: Fixed syntax for PostgreSQL 8.3's
	stricter checking.

	* deb-specific/sf-2.6-complete.sql: Fixed a foreign key constraint
	for compatibility with PostgreSQL 8.3.

2008-02-13  Roland Mas  <lolando@debian.org>

	* common/include/Group.class.php: 
	* www/admin/unsubscribe.php: Fixed yet another few undefined
	variable warnings.

2008-02-07  Roland Mas  <lolando@debian.org>

	* www/account/*: Migrate to util_make_url() and util_make_link().

2008-01-19  Roland Mas  <lolando@debian.org>

	* cronjobs/massmail.php: Added missing i18n on the mass mail cron
	script.

2008-01-14  Roland Mas  <lolando@debian.org>

	* www/export/rss20_news.php: Fixed typo that prevented the RSS
	feed from returning any results.

2008-01-13  Roland Mas  <lolando@debian.org>

	* common/include/Plugin.class.php: Removed two unused functions.

	* common/include/utils.php: New functions util_make_url and
	util_make_link, whose goal is to provide a central place where URL
	scheme is implemented.
	* www/themes/gforge/Theme.class.php: Use these functions.
	* common/*: Ditto.
	* cronjobs/*: Ditto.
	* deb-specific/*: Ditto.
	* www/* (not recursive): Ditto.

2008-01-11  Roland Mas  <lolando@debian.org>

	* www/export/*.php: The previous validation didn't work since
	we're no longer using register_globals=on.  Fixed that.

	* www/export/*.php: Fixed a bunch of PHP warnings.

2008-01-09  Roland Mas  <lolando@debian.org>

	* www/export/rss_sfprojects.php: Validate input to prevent an SQL
	injection.
	* www/export/forum.php: Ditto.
	* www/export/rss20_newreleases.php: Ditto.
	* www/export/rss20_news.php: Ditto.