@@ -463,7 +463,7 @@ switch (getStringFromRequest('func')) {
 	}
 	case 'download' : {
 		$aid = getStringFromRequest('aid');
-		Header("Redirect: ".$GLOBALS['sys_urlprefix']."/tracker/download.php?group_id=$group_id&atid=$atid&aid=$aid&file_id=$file_id");
+		Header("Redirect: ".util_make_url ("/tracker/download.php?group_id=$group_id&atid=$atid&aid=$aid&file_id=$file_id"));
 		break;
 	}
 	case 'detail' : {
