@@ -1,6 +1,8 @@
 2008-03-07  Christian Bayle <bayle@debian.org>
 	
-	* admin/*,my/*: Migrate to util_make_url()
+	* admin/*: Migrate to util_make_url() and util_make_link()
+	* my/*: Ditto
+	* tracker/*: Ditto
 	* introduced $sys_noforcetype to make possible to get rid of /projects
 	and /users forcetype
 
